# lista-presentes

./: LICENSE  README.md  manage.py  pyproject.toml
convidados/: models.py  urls.py  views.py
convidados/migrations/: 0001_initial.py
convidados/templates/: convidados.html
core/: settings.py  urls.py
noivos/: admin.py  models.py  styles.py  views.py
noivos/migrations/: 0001_initial.py  0002_convidados.py  0003_alter_presentes_options_presentes_reservado_por.py  0004_convidados_acompanhantes_confirmados.py
noivos/templates/: home.html  lista_convidados.html
templates/: base.html
templates/partials/: navbar.html
