[tool.poetry]
name = "lista-presentes"
version = "0.1.0"
description = ""
authors = ["jonasr1 <yatosama924@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
pillow = "^11.0.0"
django-livereload-server = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
